--- a/scss/style.css
+++ b/scss/style.css
@@ -20,12 +20,17 @@ body {
 
 /* 567 */
 @media (min-width: 0px) {
+  .container {
+    padding: 0 15px;
+  }
   .button {
     padding: 0;
     border-color: transparent;
     border: 0;
   }
   .button--color {
+    font-family: "Inter";
+    font-weight: 500;
     background-color: #303030;
     color: #fff;
     padding: 15px 56px;
@@ -38,6 +43,8 @@ body {
     padding: 13px 31px;
     margin-right: 4px;
     transition: all 0.3s ease-in;
+    min-width: 128px;
+    margin-bottom: 12px;
   }
   .button--tabs:last-child {
     margin-right: 0;
@@ -52,7 +59,6 @@ body {
     border: 1px solid #303030;
     border-radius: 50%;
     left: 22px;
-    transform: translateY(-16%);
   }
   .button--prev::after, .button--next::after {
     position: absolute;
@@ -61,7 +67,7 @@ body {
     transform: translate(-50%, -50%);
     background: url("../img/icon/arrow.svg") no-repeat 100% 100%;
     width: 16px;
-    height: 16px;
+    height: 7px;
     content: "";
   }
   .button--next {
@@ -71,18 +77,69 @@ body {
   .button--next::after {
     transform: translate(-50%, -50%) rotate(180deg);
   }
-  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev {
-    top: 19px;
-    right: 1px;
+  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
+    top: 129px;
+    left: 0;
   }
-  .sale__wrapper-tabs .button--prev {
-    right: 64px;
-    left: auto;
+  .sale__wrapper-tabs .button--next, .product-day .button--next {
+    transform: translateX(125%);
+  }
+  .product-day .button--next, .product-day .button--prev {
+    top: 94px;
+  }
+  .button--product-day {
+    font-family: "Inter";
+    font-size: 14px;
+    line-height: 14px;
+    padding: 5px 11px;
+    margin-right: 8px;
+  }
+  .button--product-day:last-child {
+    margin-right: 0;
+  }
+  .button--basket {
+    font-family: "Inter";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    padding: 21px 0;
+  }
+  .button--basket:first-child {
+    margin-bottom: 10px;
+    background-color: #303030;
+    color: #fff;
+  }
+  .burger {
+    position: relative;
+    width: 24px;
+    height: 21px;
+    cursor: pointer;
+  }
+  .burger__line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #303030;
+  }
+  .burger__line:nth-child(2) {
+    top: 50%;
+    transform: translateY(50%);
+  }
+  .burger__line:nth-child(3) {
+    top: 100%;
   }
   .list {
     padding: 0;
     list-style: none;
     margin-bottom: 0;
+  }
+  .list--product-day {
+    padding-left: 12px;
+  }
+  .section {
+    margin-bottom: 60px;
   }
   .navigation {
     padding-right: 0;
@@ -90,6 +147,11 @@ body {
   .navigation__link {
     color: #303030;
     text-decoration: none;
+  }
+  .logo {
+    display: inline-block;
+    text-align: left;
+    width: auto;
   }
   .logo img {
     width: 183px;
@@ -108,6 +170,17 @@ body {
   .title--sale {
     margin-bottom: 26px;
   }
+  .title--product-day {
+    margin-bottom: 35px;
+  }
+  .title--h3 {
+    font-size: 32px;
+    line-height: 32px;
+    margin-bottom: 13px;
+  }
+  .title--articles {
+    margin-bottom: 44px;
+  }
   .picture {
     display: block;
     width: 100%;
@@ -116,9 +189,63 @@ body {
   .picture img {
     width: 100%;
     height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
-  .picture--sale {
-    padding: 0 34px;
+  .picture--advertisement {
+    width: 50%;
+  }
+  .picture--advertisement img {
+    -o-object-position: bottom;
+       object-position: bottom;
+  }
+  .header {
+    padding: 24px 0;
+    margin-bottom: 20px;
+  }
+  .header.active {
+    position: absolute;
+    top: 0;
+    background-color: white;
+    height: 100vh;
+    z-index: 2;
+    padding: 24px 15px;
+  }
+  .header.active .logo {
+    visibility: hidden;
+  }
+  .header.active .header__lk, .header.active .header__select, .header.active .header__bottom, .header.active .header__contact {
+    display: block;
+  }
+  .header.active .header__lk {
+    position: absolute;
+    bottom: 54px;
+    left: 0;
+  }
+  .header.active .header__login ul {
+    display: flex;
+  }
+  .header.active .header__bottom {
+    padding: 20px;
+  }
+  .header.active .header__login {
+    margin-bottom: 20px;
+  }
+  .header.active .header__bottom .navigation {
+    margin-bottom: 44px;
+  }
+  .header.active .header__lk ul {
+    display: flex;
+  }
+  .header.active .header__bottom .navigation__list li:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  .header__top {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header__lk, .header__select, .header__bottom, .header__contact {
+    display: none;
   }
   .header__select-wrapper, .header__tel {
     position: relative;
@@ -174,7 +301,6 @@ body {
   }
   .header__bottom {
     background-color: #F8F8F8;
-    padding: 17px 136px 19px 50px;
   }
   .superskid__sale, .superskid__product {
     font-family: "Prata";
@@ -182,6 +308,14 @@ body {
   }
   .superskid__content {
     padding-left: 15px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .superskid__wrapper {
+    margin: 0;
+    background-color: #F8F8F8;
   }
   .superskid__pagination.swiper-pagination {
     bottom: 23px;
@@ -195,7 +329,6 @@ body {
     background-color: #303030;
   }
   .popular__list {
-    flex-wrap: nowrap;
     max-width: 100%;
     margin: 0;
     justify-content: space-between;
@@ -203,7 +336,6 @@ body {
   .popular__item {
     font-size: 0;
     background-color: #F8F8F8;
-    width: calc(16% - 9px);
     padding: 29px 31px 25px 28px;
   }
   .popular__link {
@@ -224,7 +356,7 @@ body {
     position: relative;
   }
   .sale__wrapper-button {
-    margin-bottom: 35px;
+    margin-bottom: 107px;
   }
   .sale__wrapper-content {
     display: none;
@@ -236,13 +368,11 @@ body {
   }
   .sale__list {
     margin: 0;
-    flex-wrap: nowrap;
     justify-content: space-between;
   }
   .sale__list li {
     position: relative;
     border: 1px solid #F0F0F0;
-    width: calc(25% - 12px);
     padding: 40px 24px 10px 24px;
   }
   .sale__list li:last-child {
@@ -289,6 +419,346 @@ body {
     line-height: 14px;
     color: #8F8F8F;
   }
+  .advertisement {
+    margin-bottom: 123px;
+  }
+  .advertisement__list {
+    justify-content: space-between;
+    margin: 0;
+  }
+  .advertisement__item {
+    display: flex;
+    min-height: 550px;
+    justify-content: space-between;
+    padding: 0;
+    background-color: #F8F8F8;
+    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: end;
+  }
+  .advertisement__item:first-child {
+    align-items: center;
+  }
+  .advertisement__item:last-child {
+    margin-bottom: 0;
+  }
+  .advertisement__left-wrapper {
+    padding-top: 43px;
+  }
+  .advertisement__content {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 32px;
+    padding-left: 27px;
+    margin: 0;
+    margin-bottom: 24px;
+  }
+  .advertisement__discount {
+    background-color: #43807F;
+    text-align: center;
+    color: #fff;
+  }
+  .advertisement__discount span:first-child {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 38px;
+    margin-right: 13px;
+    display: inline-block;
+    vertical-align: super;
+  }
+  .advertisement__discount span:last-child {
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 52px;
+  }
+  .advertisement__item:nth-child(2) .advertisement__discount {
+    background-color: #E24B33;
+  }
+  .advertisement__item:nth-child(3) .advertisement__discount {
+    background-color: #E1A661;
+  }
+  .product-day {
+    position: relative;
+    margin-bottom: 119px;
+  }
+  .product-day__counter-wrapper, .product-day__counter, .product-day__wrapper-button, .product-day__wrapper-time, .product-day__wrapper-price {
+    display: flex;
+  }
+  .product-day__wrapper {
+    justify-content: space-between;
+  }
+  .product-day__wrapper-left {
+    padding-top: 5px;
+  }
+  .product-day__wrapper-right {
+    padding-right: 0;
+  }
+  .product-day__card {
+    margin: 0;
+  }
+  .product-day__rating {
+    margin-bottom: 22px;
+  }
+  .product-day__rating svg {
+    margin-right: 3px;
+  }
+  .product-day__article {
+    font-family: "Inter";
+    font-size: 14px;
+    line-height: 14px;
+    display: inline-block;
+  }
+  .product-day__counter {
+    background-color: #F5F5F5;
+    padding: 12px 14px;
+    justify-content: space-between;
+    width: 44%;
+  }
+  .product-day__wrapper-time {
+    font-family: "Inter";
+    flex-direction: column;
+    background-color: #fff;
+    text-align: center;
+    padding: 5px 0;
+  }
+  .product-day__wrapper-time span:first-child {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+  }
+  .product-day__wrapper-time span:nth-child(2) {
+    font-weight: 300;
+    font-size: 11px;
+    line-height: 11px;
+  }
+  .product-day__wrapper-price {
+    align-items: center;
+    width: calc(50% - 20px);
+    padding-top: 21px;
+  }
+  .product-day__sale {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 13px;
+    border-radius: 15px;
+    padding: 2px 8px;
+    background-color: #E24B33;
+    color: #fff;
+  }
+  .product-day__price-active, .product-day__price-no-active {
+    font-family: "Inter";
+  }
+  .product-day__price-active {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 18px;
+  }
+  .product-day__price-no-active {
+    font-size: 16px;
+    line-height: 16px;
+    margin-right: 17px;
+  }
+  .product-day__counter-wrapper {
+    justify-content: space-between;
+    flex-direction: column;
+    padding-right: 62px;
+    border-bottom: 1px solid #F0F0F0;
+    padding-bottom: 20px;
+    margin-bottom: 22px;
+  }
+  .product-day__color {
+    font-family: "Inter";
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 12px;
+    display: inline-block;
+    margin-bottom: 16px;
+  }
+  .product-day__input {
+    width: 30px;
+    height: 30px;
+    margin-right: 4px;
+  }
+  .product-day__choise-color {
+    margin-bottom: 21px;
+    margin-right: 10px;
+  }
+  .product-day__size {
+    font-family: "Inter";
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 12px;
+    position: relative;
+    margin-bottom: 17px;
+    display: inline-block;
+  }
+  .product-day__size::after {
+    content: "?";
+    position: absolute;
+    top: 0;
+    left: calc(100% + 8px);
+    background-color: #F0F0F0;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+  }
+  .product-day__basket {
+    display: flex;
+    flex-direction: column;
+  }
+  .product-day__wrapper-size {
+    margin-bottom: 47px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .product-day__wrapper-button {
+    flex-direction: column;
+  }
+  .product-day__item {
+    margin-bottom: 15px;
+  }
+  .product-day__item svg {
+    margin-right: 7px;
+    width: 21px;
+    height: 21px;
+    display: inline-block;
+  }
+  .product-day__item svg:last-child {
+    margin-right: 0;
+  }
+  .articles {
+    position: relative;
+  }
+  .articles__link {
+    font-family: "Inter";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    color: #303030;
+    text-decoration: none;
+    position: absolute;
+    top: 29px;
+    right: 41px;
+  }
+  .articles__link::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -50%;
+    transform: translate(-11%, -19%);
+    width: 25px;
+    height: 25px;
+    background: url("../img/icon/arrow-link.svg") no-repeat;
+  }
+  .articles__item {
+    margin-bottom: 23px;
+  }
+  .articles__item:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+  .articles__link-blog {
+    text-decoration: none;
+  }
+  .articles__info {
+    padding-top: 18px;
+  }
+  .articles__date {
+    font-family: "Inter";
+    font-size: 14px;
+    line-height: 14px;
+    color: #8F8F8F;
+    margin-bottom: 11px;
+    display: inline-block;
+  }
+  .articles__content {
+    font-family: "Inter";
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #303030;
+    margin: 0;
+  }
+}
+@media (min-width: 768px) {
+  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
+    top: 90px;
+    left: 0;
+  }
+  .picture--advertisement {
+    width: 100%;
+  }
+  .superskid__wrapper {
+    align-items: center;
+  }
+  .popular__item {
+    width: calc(33% - 22px);
+    margin-bottom: 20px;
+  }
+  .popular__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+  .advertisement__item {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    background-color: #F8F8F8;
+    width: calc(50% - 20px);
+    flex-direction: inherit;
+    min-height: 179px;
+  }
+}
+@media (min-width: 1024px) {
+  .list--header {
+    display: flex;
+  }
+  .list--header li:not(:last-child) {
+    margin-right: 33px;
+  }
+  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
+    top: 90px;
+    right: 0px;
+    left: auto;
+    transform: none;
+  }
+  .sale__wrapper-tabs .button--prev, .product-day .button--prev {
+    transform: translateX(-125%);
+  }
+  .navigation__list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header__select, .header__tel, .header__lk, .header__contact {
+    display: inline-block;
+  }
+  .header__contact, .header__lk {
+    width: auto;
+  }
+  .header__lk {
+    display: none;
+    align-self: flex-end;
+  }
+  .header__top {
+    flex-wrap: nowrap;
+  }
+  .header__bottom {
+    display: none;
+  }
+  .superskid__product {
+    font-size: 50px;
+    line-height: 50px;
+    margin-top: 28px;
+    margin-bottom: 52px;
+  }
+  .superskid__content {
+    text-align: left;
+  }
+  .superskid .superskid__wrapper {
+    padding: 0 0px 0 116px;
+  }
+  .sale__list li {
+    width: calc(25% - 20px);
+  }
 }
 /* 1440 */
 @media (min-width: 1440px) {
@@ -298,52 +768,97 @@ body {
     margin: 0 auto;
     padding: 0 20px;
   }
-  .list--header {
-    display: flex;
-  }
-  .list--header li:not(:last-child) {
-    margin-right: 33px;
-  }
-  .navigation__list {
-    display: flex;
-    justify-content: space-between;
-  }
   .logo {
-    text-align: center;
+    display: block;
   }
-  .section {
-    margin-bottom: 115px;
+  .burger {
+    display: none;
   }
   .header {
-    margin-bottom: 20px;
+    padding: 0;
   }
   .header__top {
     padding-top: 24px;
     padding-bottom: 25px;
   }
-  .header__contact {
-    align-self: flex-end;
-  }
   .header__lk {
+    display: block;
+    width: auto;
     display: flex;
     justify-content: space-between;
-    padding-left: 100px;
     align-self: flex-end;
+  }
+  .header__bottom {
+    display: flex;
+    padding: 17px 65px 19px 50px;
   }
   .header__search {
     text-align: end;
   }
-  .superskid {
-    background-color: #F8F8F8;
+  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
+    top: 19px;
+    right: 1px;
   }
-  .superskid__wrapper {
-    display: flex;
-    align-items: center;
-    padding: 0 0px 0 123px;
+  .sale__wrapper-tabs .button--prev, .product-day .button--prev {
+    right: 64px;
+    left: auto;
   }
-  .superskid__sale {
+  .section {
+    margin-bottom: 115px;
+  }
+  .popular__item {
+    width: calc(16% - 9px);
+  }
+  .sale__list {
+    flex-wrap: nowrap;
+  }
+  .sale__list li {
+    width: calc(25% - 12px);
+  }
+  .sale__wrapper-button {
+    margin-bottom: 35px;
+  }
+  .advertisement__item {
+    width: calc(33% - 9px);
+  }
+  .product-day__wrapper-left {
+    width: calc(50% - 76px);
+  }
+  .product-day__wrapper-right {
+    width: 50%;
+    padding-left: 88px;
+  }
+}
+@media (min-width: 1920px) {
+  .logo {
+    text-align: center;
+    width: 33.33333333%;
+  }
+  .button--color {
+    font-size: 14px;
+    line-height: 14px;
+    width: 200px;
+    padding: 20px 56px;
+  }
+  .header__contact {
+    align-self: flex-end;
+  }
+  .header__lk {
+    padding-left: 105px;
+    width: 33.33333333%;
+  }
+  .header__contact {
+    width: 33.33333333%;
+  }
+  .header__bottom {
+    padding: 18px 123px 20px 38px;
+  }
+  .superskid .superskid__sale {
     font-size: 20px;
     line-height: 20px;
+  }
+  .superskid .superskid__wrapper {
+    padding: 0 0px 0 111px;
   }
   .superskid__product {
     font-size: 50px;
