добавила активные элементы,  но сайт так же в разработке

--- a/scss/style.css
+++ b/scss/style.css
@@ -34,6 +34,13 @@ body {
     background-color: #303030;
     color: #fff;
     padding: 15px 56px;
+    transition: all 0.3s ease-in;
+  }
+  .button--color:hover {
+    background-color: #505050;
+  }
+  .button--color:active {
+    background-color: #000000;
   }
   .button--tabs {
     background-color: #F0F0F0;
@@ -49,6 +56,9 @@ body {
   .button--tabs:last-child {
     margin-right: 0;
   }
+  .button--tabs:hover {
+    background-color: #DDDDDD;
+  }
   .button--tabs.active {
     background-color: #303030;
     color: #fff;
@@ -59,6 +69,8 @@ body {
     border: 1px solid #303030;
     border-radius: 50%;
     left: 22px;
+    top: 49%;
+    transition: all 0.3s ease-in;
   }
   .button--prev::after, .button--next::after {
     position: absolute;
@@ -70,17 +82,32 @@ body {
     height: 7px;
     height: 7px;
     content: "";
+    transition: all 0.3s ease-in;
+  }
+  .button--prev:hover, .button--next:hover {
+    background-color: #fff;
+  }
+  .button--prev:active::after, .button--next:active::after {
+    transform: translate(50%, -100%);
   }
   .button--next {
     left: auto;
     right: 25px;
   }
   .button--next::after {
-    transform: translate(-50%, -50%) rotate(180deg);
+    transform: translate(-50%, -50%);
+    background: url("../img/icon/arrow-next.svg") no-repeat 100% 100%;
+  }
+  .button--prev:active::after {
+    transform: translate(-100%, 0%);
   }
   .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
     top: 129px;
     left: 0;
+    transition: all 0.3s ease-in;
+  }
+  .sale__wrapper-tabs .button--next:hover, .sale__wrapper-tabs .button--prev:hover, .product-day .button--next:hover, .product-day .button--prev:hover {
+    background-color: #F5F5F5;
   }
   .sale__wrapper-tabs .button--next, .product-day .button--next {
     transform: translateX(125%);
@@ -94,9 +121,19 @@ body {
     line-height: 14px;
     padding: 5px 11px;
     margin-right: 8px;
+    background-color: #fff;
+    border: 1px solid #DADADA;
+    transition: all 0.3s ease-in;
   }
   .button--product-day:last-child {
     margin-right: 0;
+  }
+  .button--product-day:hover {
+    border: 1px solid #303030;
+  }
+  .button--product-day:active {
+    background-color: #303030;
+    color: #fff;
   }
   .button--basket {
     font-family: "Inter";
@@ -104,11 +141,69 @@ body {
     font-size: 14px;
     line-height: 14px;
     padding: 21px 0;
+    transition: all 0.3s ease-in;
   }
   .button--basket:first-child {
     margin-bottom: 10px;
     background-color: #303030;
     color: #fff;
+  }
+  .button--basket:first-child:hover {
+    background-color: #505050;
+  }
+  .button--basket:first-child:active {
+    background-color: #000000;
+  }
+  .button--basket:nth-child(2) {
+    background-color: #fff;
+    border: 1px solid #303030;
+  }
+  .button--basket:nth-child(2):hover {
+    background-color: #303030;
+    color: #fff;
+  }
+  .button--basket:nth-child(2):active {
+    background-color: #000000;
+    color: #fff;
+  }
+  .list--header li .button {
+    background-color: #fff;
+  }
+  .list--header li:first-child .button {
+    position: relative;
+  }
+  .list--header li:first-child .button::after {
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 15px;
+    background-color: #E24B33;
+    position: absolute;
+    top: -7px;
+    left: 14px;
+    color: white;
+    content: "23";
+    width: 19px;
+    height: 19px;
+    border-radius: 50%;
+  }
+  .button--lk {
+    background-color: #fff;
+    font-size: 14px;
+    line-height: 36px;
+    color: #303030;
+    text-decoration: none;
+    transition: all 0.3s ease-in;
+  }
+  .button--lk:first-child span {
+    margin-right: 6px;
+    border: 1px solid #303030;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    padding-right: 10px;
+  }
+  .button--lk:hover {
+    opacity: 0.5;
   }
   .burger {
     position: relative;
@@ -146,6 +241,9 @@ body {
     padding-right: 0;
   }
   .navigation__link {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 13px;
     color: #303030;
     text-decoration: none;
   }
@@ -267,35 +365,102 @@ body {
   .header__lk, .header__select, .header__bottom, .header__contact {
     display: none;
   }
+  .header__select-wrapper .choices {
+    min-width: 188px;
+  }
+  .header__select-wrapper .choices .choices__inner {
+    background-color: transparent;
+    border: 0;
+    padding: 0;
+    min-height: auto;
+    display: block;
+  }
+  .header__select-wrapper .choices .choices__inner .choices__list--single {
+    padding: 0px 15px 0px 25px;
+    padding-top: 0;
+  }
+  .header__select-wrapper .choices[data-type*=select-one]::after {
+    border: none;
+    background: url("../img/icon/select.svg") no-repeat;
+    transform: translateY(41%);
+    width: 9px;
+    height: 9px;
+    right: 24.5px;
+    transition: all 0.3s ease-in;
+  }
+  .header__select-wrapper .choices[data-type*=select-one].is-open::after {
+    background: url("../img/icon/select-open.svg") no-repeat;
+    margin: 0;
+    transform: translateY(-35%);
+  }
+  .header .choices__list--dropdown .choices__item--selectable.is-highlighted::after,
+  .header .choices__list[aria-expanded] .choices__item--selectable.is-highlighted::after {
+    width: 25px;
+    height: 25px;
+    top: 75%;
+    background: url(../img/icon/select-checked.svg) no-repeat;
+  }
   .header__select-wrapper, .header__tel {
     position: relative;
-    padding-left: 20px;
     display: inline-block;
   }
-  .header__select-wrapper::after, .header__tel::after {
+  .header__tel::after {
     position: absolute;
     content: "";
-    top: 0;
+    top: 42%;
+    transform: translateY(-50%);
     left: 0;
     width: 12px;
     height: 16px;
     background: url(../img/icon/location.svg) no-repeat 100% 100%;
   }
   .header__select-wrapper {
-    margin-right: 34px;
+    margin-right: 29px;
+    transition: all 0.3s ease-in;
+  }
+  .header__select-wrapper .choices {
+    transition: all 0.3s ease-in;
+  }
+  .header__select-wrapper .choices:hover {
+    opacity: 0.5;
+  }
+  .header__select-wrapper .choices::before {
+    position: absolute;
+    content: "";
+    top: 59%;
+    transform: translateY(-50%);
+    left: 3px;
+    width: 12px;
+    height: 16px;
+    background: url(../img/icon/location.svg) no-repeat 100% 100%;
+  }
+  .header__select-wrapper .choices.is-focused.is-open {
+    opacity: 1;
+  }
+  .header__select .choices__list--dropdown .choices__item, .header .choices__list[aria-expanded] .choices__item {
+    padding-right: 0;
+    padding: 7px;
+  }
+  .header .choices__list--dropdown, .header .choices__list[aria-expanded] {
+    z-index: 2;
   }
   .header__select {
     border: none;
+    font-size: 14px;
   }
   .header__contact {
     padding-left: 0;
   }
   .header__tel {
     font-size: 14px;
-    line-height: 26px;
+    line-height: 29px;
     text-decoration: none;
     color: #303030;
-    padding-left: 29px;
+    padding-left: 26px;
+    transition: all 0.3s ease-in;
+  }
+  .header__tel:hover {
+    opacity: 0.5;
   }
   .header__tel::after {
     width: 16px;
@@ -304,20 +469,6 @@ body {
   }
   .header__lk {
     padding-right: 0;
-  }
-  .header__login-link {
-    font-size: 14px;
-    line-height: 34px;
-    color: #303030;
-    text-decoration: none;
-  }
-  .header__login-link:first-child {
-    margin-right: 10px;
-    border: 1px solid #303030;
-    border-top: none;
-    border-left: none;
-    border-bottom: none;
-    padding-right: 10px;
   }
   .header__bottom {
     background-color: #F8F8F8;
@@ -329,6 +480,7 @@ body {
   .superskid__content {
     padding-left: 15px;
     text-align: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -338,7 +490,8 @@ body {
     background-color: #F8F8F8;
   }
   .superskid__pagination.swiper-pagination {
-    bottom: 23px;
+    bottom: 17px;
+    left: 3px;
   }
   .superskid__pagination.swiper-pagination .swiper-pagination-bullet {
     background-color: transparent;
@@ -357,6 +510,10 @@ body {
     font-size: 0;
     background-color: #F8F8F8;
     padding: 29px 31px 25px 28px;
+    margin-bottom: 20px;
+  }
+  .popular__item:last-child {
+    margin-bottom: 0;
   }
   .popular__link {
     text-decoration: none;
@@ -448,7 +605,6 @@ body {
   }
   .advertisement__item {
     display: flex;
-    min-height: 550px;
     justify-content: space-between;
     padding: 0;
     background-color: #F8F8F8;
@@ -517,7 +673,7 @@ body {
     margin: 0;
   }
   .product-day__rating {
-    margin-bottom: 22px;
+    margin-bottom: 16px;
   }
   .product-day__rating svg {
     margin-right: 3px;
@@ -613,15 +769,59 @@ body {
     margin-bottom: 17px;
     display: inline-block;
   }
-  .product-day__size::after {
-    content: "?";
-    position: absolute;
-    top: 0;
-    left: calc(100% + 8px);
-    background-color: #F0F0F0;
+  .product-day__marker {
     width: 18px;
     height: 18px;
     border-radius: 50%;
+    background-color: #F0F0F0;
+    display: inline-block;
+    cursor: pointer;
+    position: absolute;
+    top: -3px;
+    right: -29px;
+  }
+  .product-day__marker::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "?";
+  }
+  .product-day__marker::before {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    cursor: pointer;
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+  }
+  .product-day__tooltip {
+    font-size: 14px;
+    line-height: 20px;
+    position: absolute;
+    top: -152px;
+    left: -50%;
+    transform: translateX(-45%);
+    width: 271px;
+    background-color: #fff;
+    padding: 24px;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    transition: all 0.3s ease-in;
+  }
+  .product-day__tooltip::before {
+    position: absolute;
+    bottom: -3px;
+    content: "";
+    left: 50%;
+    transform: translateX(50%);
+    width: 8px;
+    background-color: #fff;
+    height: 8px;
+    transform: rotate(45deg);
+  }
+  .product-day__marker:hover .product-day__tooltip {
+    opacity: 1;
   }
   .product-day__basket {
     display: flex;
@@ -660,16 +860,20 @@ body {
     position: absolute;
     top: 29px;
     right: 41px;
+    transition: all 0.3s ease-in;
   }
   .articles__link::after {
     content: "";
     position: absolute;
     top: 50%;
     right: -50%;
-    transform: translate(-11%, -19%);
+    transform: translate(-20%, -26%);
     width: 25px;
     height: 25px;
     background: url("../img/icon/arrow-link.svg") no-repeat;
+  }
+  .articles__link:hover {
+    opacity: 0.5;
   }
   .articles__item {
     margin-bottom: 23px;
@@ -705,17 +909,31 @@ body {
     top: 90px;
     left: 0;
   }
+  .button--color {
+    width: 200px;
+  }
   .picture--advertisement {
     width: 100%;
   }
   .superskid__wrapper {
     align-items: center;
   }
+  .superskid__content {
+    align-items: center;
+    padding-left: 69px;
+  }
   .popular__item {
     width: calc(33% - 22px);
     margin-bottom: 20px;
   }
   .popular__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+  .sale__list li {
+    width: calc(50% - 20px);
+    margin-bottom: 20px;
+  }
+  .sale__list li:nth-last-of-type(-n+2) {
     margin-bottom: 0;
   }
   .advertisement__item {
@@ -731,6 +949,7 @@ body {
 @media (min-width: 1024px) {
   .list--header {
     display: flex;
+    align-items: center;
   }
   .list--header li:not(:last-child) {
     margin-right: 33px;
@@ -742,7 +961,7 @@ body {
     transform: none;
   }
   .sale__wrapper-tabs .button--prev, .product-day .button--prev {
-    transform: translateX(-125%);
+    transform: translateX(-13%);
   }
   .navigation__list {
     display: flex;
@@ -824,7 +1043,7 @@ body {
     left: auto;
   }
   .section {
-    margin-bottom: 115px;
+    margin-bottom: 119px;
   }
   .popular__item {
     width: calc(16% - 9px);
@@ -860,6 +1079,38 @@ body {
     width: 200px;
     padding: 20px 56px;
   }
+  .sale__wrapper-tabs .button--next, .sale__wrapper-tabs .button--prev, .product-day .button--next, .product-day .button--prev {
+    top: 6px;
+    right: 1px;
+  }
+  .button .sale__wrapper-tabs .button--prev {
+    transform: translateX(-113%);
+  }
+  .sale__wrapper-tabs .button--prev, .product-day .button--prev {
+    transform: translateX(-111%);
+  }
+  .button--tabs {
+    margin: 0;
+  }
+  .button--tabs {
+    min-width: auto;
+  }
+  .navigation {
+    padding-right: 4px;
+  }
+  .title--articles {
+    margin-bottom: 41px;
+  }
+  .picture--sale {
+    padding: 0 34px;
+  }
+  .picture--advertisement {
+    width: 50%;
+  }
+  .picture--advertisement img {
+    -o-object-position: center;
+       object-position: center;
+  }
   .header__contact {
     align-self: flex-end;
   }
@@ -871,19 +1122,95 @@ body {
     width: 33.33333333%;
   }
   .header__bottom {
-    padding: 18px 123px 20px 38px;
+    padding: 16px 123px 20px 38px;
+  }
+  .superskid__content {
+    padding-left: 16px;
+    align-items: baseline;
   }
   .superskid .superskid__sale {
     font-size: 20px;
     line-height: 20px;
   }
   .superskid .superskid__wrapper {
-    padding: 0 0px 0 111px;
+    padding: 0px 19px 0px 111px;
   }
   .superskid__product {
     font-size: 50px;
     line-height: 50px;
     margin-top: 28px;
-    margin-bottom: 52px;
+    margin-bottom: 54px;
   }
-}/*# sourceMappingURL=style.css.map */ 
+  .popular__item {
+    font-size: 0;
+    background-color: #F8F8F8;
+    padding: 0;
+    padding-bottom: 25px;
+    margin-bottom: 0;
+    position: relative;
+    padding-right: 17px;
+    padding-left: 17px;
+  }
+  .popular__inner-picture {
+    position: absolute;
+    top: 42%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .popular__link {
+    min-height: 233px;
+  }
+  .sale__list li {
+    margin-bottom: 0;
+  }
+  .advertisement__item {
+    align-items: center;
+    margin-bottom: 0;
+    max-height: 290px;
+  }
+  .advertisement__left-wrapper {
+    padding-top: 21px;
+    width: calc(50% - 13px);
+  }
+  .advertisement__content {
+    margin-bottom: 23px;
+  }
+  .product-day {
+    margin-bottom: 126px;
+  }
+  .product-day__wrapper-left {
+    width: calc(50% - 87px);
+  }
+  .product-day__wrapper-right {
+    padding-left: 88px;
+  }
+  .product-day__counter-wrapper {
+    flex-direction: inherit;
+  }
+  .product-day__basket {
+    flex-direction: inherit;
+    justify-content: space-between;
+  }
+  .product-day__wrapper-size {
+    margin-bottom: 45px;
+  }
+  .product-day__wrapper-button {
+    width: 71%;
+  }
+  .product-day__interactions {
+    width: calc(30% - 34px);
+  }
+  .product-day__item {
+    display: flex;
+  }
+  .product-day__item svg {
+    margin-right: 6px;
+  }
+  .articles__link {
+    top: 25px;
+    right: 38px;
+  }
+  .articles__date {
+    margin-bottom: 8px;
+  }
+}/*# sourceMappingURL=style.css.map */
